[gd_scene load_steps=16 format=3 uid="uid://ckqxyhwrtplkt"]

[ext_resource type="Script" uid="uid://dfomabdbuqvyx" path="res://Scenes/UI/hud.gd" id="1_4bm6u"]
[ext_resource type="Texture2D" uid="uid://dd0d7eth13gky" path="res://Asset/Sprite/UI/heart.png" id="1_omqfp"]
[ext_resource type="Texture2D" uid="uid://bsmh7nd8lndh" path="res://Asset/Sprite/Textures/PanelTexture.png" id="1_qc5w2"]
[ext_resource type="FontFile" uid="uid://b4lfqjm4wfgf2" path="res://Asset/Font/VCR_OSD_MONO_1.001.ttf" id="3_xaom8"]
[ext_resource type="StyleBox" uid="uid://bxxuvw3u47hhj" path="res://Resources/Texture/Button/ButtonNormal.tres" id="5_i4i0y"]
[ext_resource type="Texture2D" uid="uid://br14g3nimg5rr" path="res://Asset/Sprite/UI/icon task.png" id="5_pydgx"]
[ext_resource type="PackedScene" uid="uid://bcicsfokqyoh5" path="res://Scenes/UI/Menus/GameOver.tscn" id="5_ykvyr"]
[ext_resource type="PackedScene" uid="uid://b1nsbqfdtiaqf" path="res://Scenes/UI/Menus/NextLevel.tscn" id="6_lelo4"]
[ext_resource type="StyleBox" uid="uid://b1415tteok2jy" path="res://Resources/Texture/Button/ButtonPressed.tres" id="6_yenib"]
[ext_resource type="StyleBox" uid="uid://do5xtbv76wo0b" path="res://Resources/Texture/Button/ButtonHover.tres" id="7_pydgx"]
[ext_resource type="PackedScene" uid="uid://cac7sq4vlj501" path="res://Scenes/Fade/fade.tscn" id="10_yenib"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xaom8"]
texture = ExtResource("1_qc5w2")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc5w2"]
atlas = ExtResource("1_omqfp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaom8"]
atlas = ExtResource("1_omqfp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_umhnj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc5w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaom8")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Hud" type="CanvasLayer"]
layer = -1
script = ExtResource("1_4bm6u")

[node name="Heart" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 72.0

[node name="Panel" type="Panel" parent="Heart"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -20.0
offset_right = 164.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xaom8")

[node name="Heart1" type="AnimatedSprite2D" parent="Heart/Panel"]
position = Vector2(96, 20)
sprite_frames = SubResource("SpriteFrames_umhnj")

[node name="Heart2" type="AnimatedSprite2D" parent="Heart/Panel"]
position = Vector2(150, 20)
sprite_frames = SubResource("SpriteFrames_umhnj")

[node name="Heart3" type="AnimatedSprite2D" parent="Heart/Panel"]
position = Vector2(198, 20)
sprite_frames = SubResource("SpriteFrames_umhnj")

[node name="Predator found" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = 88.0
offset_right = 160.0
offset_bottom = 128.0

[node name="Panel" type="Panel" parent="Predator found"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -28.0
offset_right = 156.0
offset_bottom = 4.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xaom8")

[node name="RichTextLabel" type="RichTextLabel" parent="Predator found/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 8.0
offset_right = 338.66666
offset_bottom = 30.857147
scale = Vector2(0.6, 0.6)
theme_override_fonts/normal_font = ExtResource("3_xaom8")
bbcode_enabled = true
text = "Predator ditemukan : 0/1"
vertical_alignment = 1

[node name="Score" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = 128.0
offset_right = 160.0
offset_bottom = 168.0

[node name="Panel" type="Panel" parent="Score"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -28.0
offset_right = 148.0
offset_bottom = 4.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xaom8")

[node name="RichTextLabel" type="RichTextLabel" parent="Score/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 8.0
offset_right = 277.71426
offset_bottom = 30.857147
scale = Vector2(0.6, 0.6)
theme_override_fonts/normal_font = ExtResource("3_xaom8")
bbcode_enabled = true
text = "Score : 0"
vertical_alignment = 1

[node name="Task" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_top = 24.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="FindPredator" type="Panel" parent="Task"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -12.0
offset_right = 208.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xaom8")

[node name="IconTask" type="Sprite2D" parent="Task/FindPredator"]
position = Vector2(16, 16)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_pydgx")

[node name="RichTextLabel" type="RichTextLabel" parent="Task/FindPredator"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 237.71426
offset_bottom = 34.666668
scale = Vector2(0.6, 0.6)
theme_override_fonts/normal_font = ExtResource("3_xaom8")
bbcode_enabled = true
text = "Temukan 0 predator"
vertical_alignment = 1

[node name="Target Score" type="Panel" parent="Task"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = 28.0
offset_right = 208.0
offset_bottom = 60.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xaom8")

[node name="IconTask" type="Sprite2D" parent="Task/Target Score"]
position = Vector2(16, 16)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_pydgx")

[node name="RichTextLabel" type="RichTextLabel" parent="Task/Target Score"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 237.71426
offset_bottom = 34.666668
scale = Vector2(0.6, 0.6)
theme_override_fonts/normal_font = ExtResource("3_xaom8")
bbcode_enabled = true
text = "Target 0 score"
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -52.0
offset_right = 130.0
offset_bottom = -21.0
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_xaom8")
theme_override_styles/normal = ExtResource("5_i4i0y")
theme_override_styles/pressed = ExtResource("6_yenib")
theme_override_styles/hover = ExtResource("7_pydgx")
text = " Main Menu "

[node name="GameOver" parent="." instance=ExtResource("5_ykvyr")]
visible = false

[node name="NextLevel" parent="." instance=ExtResource("6_lelo4")]
visible = false

[node name="Fade" parent="." instance=ExtResource("10_yenib")]

[connection signal="button_down" from="Control/Play" to="." method="_on_play_button_down"]
[connection signal="mouse_entered" from="Control/Play" to="." method="_on_play_mouse_entered"]
